--- a/CENTRAL_HUB/main/CMakeLists.txt
+++ b/CENTRAL_HUB/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "uart_setUp.c" "gpio_setUp.c" "main.c"
+idf_component_register(SRCS "blindspot_config.c" "i2c_setUp.c" "peer_meshSystem.c" "tasks_config.c" "uart_setUp.c" "gpio_setUp.c" "nvs_setUp.c" "main.c"
                        INCLUDE_DIRS ".")
