--- a/S2-HUB/CMakeLists.txt
+++ b/S2-HUB/CMakeLists.txt
@@ -1,6 +1,22 @@
-# The following five lines of boilerplate have to be in your project's
-# CMakeLists in this exact order for cmake to work correctly
-cmake_minimum_required(VERSION 3.16)
+idf_component_register(
+    SRCS 
+        "gps_config.c"
+        "i2c_device_config.c"
+        "rtc_config.c"
+        "tasks_config.c"
+        "display_config.c"
+        "html_config.c"
+        "nvs_config.c" 
+        "network_config.c" 
+        "dns_server.c" 
+        "settings_config.c" 
+        "gpio_config.c" 
+        "uart_config.c" 
+        "remote_config.c" 
+        "usb_mic_config.c" 
+        "zaire_system.c" 
+        "main.c"
+    INCLUDE_DIRS "."
+)
 
-include($ENV{IDF_PATH}/tools/cmake/project.cmake)
-project(S2_HUB)
+spiffs_create_partition_image(storage ../spiffs FLASH_IN_PROJECT)
