--- a/S3-HUB/main/CMakeLists.txt
+++ b/S3-HUB/main/CMakeLists.txt
@@ -1,2 +1,10 @@
-idf_component_register(SRCS "walkie_config.c" "gpio_config.c" "uart_config.c"  "usb_cam_config.c" "main.c"
-                       INCLUDE_DIRS ".")
+idf_component_register(
+    SRCS 
+    "task_config.c"
+    "walkie_config.c" 
+    "gpio_config.c" 
+    "uart_config.c"  
+    "usb_cam_config.c" 
+    "main.c"
+    INCLUDE_DIRS "."
+)
