--- a/S3-HUB/main/CMakeLists.txt
+++ b/S3-HUB/main/CMakeLists.txt
@@ -1,11 +1,13 @@
 idf_component_register(
     SRCS 
+    "esp_now_config.c"
     "bk_config.c"
     "task_config.c"
     "walkie_config.c" 
     "gpio_config.c" 
     "uart_config.c"  
     "usb_cam_config.c" 
+    "zaire_system.c"
     "main.c"
     INCLUDE_DIRS "."
 )
